作者署名更改   文章题目格式更改

--- a/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
+++ b/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
@@ -3,11 +3,11 @@ layout: blog
 book: true
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-16/91630214.jpg
 category: 书籍
-title: INJNainggolan读过书|在读的书
+title: Signal-一副手铐背负着2.5升的眼泪
 tags:
 - 书籍
-- book
-- INJNainggolan读过书
+- 韩剧
+- 悬疑
 redirect_from:
   - /2018/02/Signal-一副手铐背负着2.5升的眼泪/
 ---
