改了一下背景图大小

--- a/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
+++ b/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
@@ -1,7 +1,7 @@
 ---
 layout: blog
 book: true
-background-image: http://t1.aixinxi.net/o_1c65bao7a11stfrscu6b1f9j5a.jpg-j.jpg
+background-image: http://t1.aixinxi.net/o_1c65cmk99115v1u2d19lr4m02lpa.png-j.jpg
 category: 书籍
 title: Signal-一副手铐背负着2.5升的眼泪
 tags:
