文章内增加图片 第三次尝试更改

--- a/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
+++ b/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
@@ -32,5 +32,5 @@ redirect_from:
 <p>  Final：</p>
 <p>  推荐案件：重庆红衣男孩案</p>
 <p>  推荐影片：走到尽头(赵振雄)</p>
-![Signal](raw.githubusercontent.com/INJNainggolan/INJNainggolan.GitHub.io/master/style/image_ex/signal.jpg)
+![Signal](https://raw.githubusercontent.com/INJNainggolan/INJNainggolan.GitHub.io/master/style/image_ex/signal.jpg)
 
