--- a/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
+++ b/_posts/2018-02-12-Signal-一副手铐背负着2.5升的眼泪.md
@@ -2,10 +2,10 @@
 layout: blog
 book: true
 background-image: http://t1.aixinxi.net/o_1c65cmk99115v1u2d19lr4m02lpa.png-j.jpg
-category: 书籍
+category: 随笔
 title: Signal-一副手铐背负着2.5升的眼泪
 tags:
-- 书籍
+- 随笔
 - 韩剧
 - 悬疑
 redirect_from:
