段落格式修改

--- a/_posts/2018-02-24-花开花落 云卷云舒.md
+++ b/_posts/2018-02-24-花开花落 云卷云舒.md
@@ -11,7 +11,7 @@ redirect_from:
   - /2018/02/花开花落 云卷云舒/
 ---
 
-><p>I'm lonely alive
+<p>I'm lonely alive
 <p>在恬静淡雅的图书馆，目光穿过古老大学校园的落地窗
 <p>金色的光泽洒在碧蓝的湖面
 <p>微风轻拂着樱花，落英缤纷
@@ -23,8 +23,9 @@ redirect_from:
 <p>看庭前，花开花落
 <p>随天际，云卷云舒
  
-><p>	
-><p>以前小小的我
+<p>		
+<br /> 
+<p>以前小小的我
 <p>喜欢《勇气》《会呼吸的痛》
 <p>而现在我会在静怡时听《故乡的原风景》，臆想北海道 春蝉流水
 <p>在落魄失意时听《page one》，为明天翻开新的一页
@@ -36,7 +37,8 @@ redirect_from:
 <p>我惊异于他们的成功，却又更想从他们的成功里看见未来那个成功的我
 <p>我只想，不再那么小伤感，而是做一个内心有深度的人，不管是高兴还是悲伤，沉寂在心里
 
-><p>	
+<p>		
+<br /> 
 <p>只是我的单纯、小孩子的特质，允许我有一个特工梦、一个侦探梦、偶尔的...会憧憬未来的那个她
 <p>只是因为这一切的一切，我仍爱柯南Sherry，继续被新一和兰感动，依然被柯南在危急时刻的一句“兰”所痛彻心扉：
 <p>依然一遍一遍的拜读丹·布朗、阿加莎·克里斯蒂、岛田庄司......
@@ -46,7 +48,8 @@ redirect_from:
 <p>看麦克格雷迪永恒的35s13'，会让我在球场上跃跃欲试；
 <p>而那个未完成的网球梦，会让我在心底默默想念，有一丝丝的小遗憾，但却懂得，失去了这次，也许有一个更好的机遇在未来等着我；
 
-><p>	 
+<p>		
+<br /> 
 <p>一个人的时候，曾后悔过来到并不喜欢的大学，与挚友臆想考研去更好的学校，静怡的图书馆、丰富的藏书、诗一般的校园......曾想过未来的路在哪里，更与挚友谈论过毕业后的我们该何去何从，挚友想去当兵磨练，这深深刺激了我的特工梦，可能我生性自由、特立独行、飞檐走壁，却并讨厌军事化束缚...
 <p>生性的自由让我热爱自然的鬼斧神工，高校选择了离天府最近的重庆，这个深山中的景逸之地--巴蜀，曾经想象过，如果在古代，我一定是一个恬淡山野的隐士：
 <p>一步踏尽一树白
@@ -54,7 +57,8 @@ redirect_from:
 <p>一梦黄粱一壶酒
 <p>一身白衣一生裁
 
-><p>	 
+<p>		
+<br /> 
 <p>爱生活 爱旅行
 <p>半年的大学生活
 <p>有坎坷、有艰辛、更有喜悦
@@ -72,7 +76,8 @@ redirect_from:
 <p>一念一清净
 <p>为浮世陈欢所迷惑，却净心参禅，领悟真谛...
 
-><p>	
+<p>		
+<br /> 
 <p>未来，
 <p>臆想住在香榭丽舍大街，某日清晨，迎着晨曦对着Eiffel说：巴黎，早安；
 <p>登上埃菲尔遥想埃菲尔与亡妻的约定；
@@ -88,7 +93,8 @@ redirect_from:
 <p>与她牵手格伦特维教堂虔诚祈福；
 <p>静静地在海牙老图书馆捧一本书，品一杯茗...
  
-><p>	
+<p>		
+<br /> 
 <p>一个人的时候
 <p>生活的无拘无束、无牵无挂
 <p>不用再去装作成熟稳重
@@ -97,7 +103,8 @@ redirect_from:
 <p>能多豪迈就有多豪迈
 <p>不拘小节、清新淡雅
  
-><p>	
+<p>		
+<br /> 
 <p>一个人的时候，买杯拿铁，伏在教学楼的顶层护栏
 <p>看校园里的嬉闹挥打，情侣缠绵
 <p>而我却显得那么格格不入
@@ -105,7 +112,8 @@ redirect_from:
 <p>可我有挚友
 <p>我们是小小的树袋熊，互偎互依
  
-><p>	
+<p>		
+<br /> 
 <p>一个人的时候
 <p>会很寂寞，但再也不落寞伤神
 <p>会在天黑独自漫步校园时莫名伤感
@@ -114,7 +122,8 @@ redirect_from:
 <p>每天的每天
 <p>我很充实
 
-><p>	 
+<p>		
+<br /> 
 <p>一个人的时候
 <p>看淡爱情，更加重视亲情
 <p>看淡名利，更加看重朋友
@@ -126,7 +135,8 @@ redirect_from:
 <p>靠自己的力量给自己快乐
 <p>努力靠自己的双手，让我爱的、爱我的人幸福
 
-><p>	
+<p>		
+<br /> 
 <p>那个世界，
 <p>不允许有我的存在，而我也不再极力挤进本不属于我的那个世界
 <p>现在的我，只爱着老爸老妈、我的家人们
@@ -139,15 +149,20 @@ redirect_from:
 <p>不经意的时候
 <p>想听你一句
 <p>好久不见...
-                                                                                                                                              <p>——Secret
+                                                                                                                                              <p>		
+<br />
+<p>——Secret
                                                                                                                                               <p>——Fliegender Holländer
 
 
 
-<p>（2013/3/24 22:05 初稿 
-           2013/4/12  20:52 再稿
-                  2013/4/20  9:19  三稿
-                          2013/6/9 12:41 丝稿
-                                  2015/10/30 19:44 木稿）</p>
+<p>		
+<br />
+<p>* 2013/3/24 22:05 初稿 
+<p>* 2013/4/12  20:52 再稿
+<p>* 2013/4/20  9:19  三稿
+<p>* 2013/6/9 12:41 丝稿
+<p>* 2015/10/30 19:44 木稿
+<p>* 2018/2/24 10:15 铁稿
 ![Signal](https://raw.githubusercontent.com/INJNainggolan/INJNainggolan.GitHub.io/master/style/image_ex/signal.jpg)
 
