尝试插入音乐

--- a/_posts/2018-02-24-花开花落 云卷云舒.md
+++ b/_posts/2018-02-24-花开花落 云卷云舒.md
@@ -11,6 +11,8 @@ redirect_from:
   - /2018/02/花开花落 云卷云舒/
 ---
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=430 height=86 src="//music.163.com/outchain/player?type=2&id=114389&auto=0&height=66"></iframe>
+
 <p>I'm lonely alive
 <p>在恬静淡雅的图书馆，目光穿过古老大学校园的落地窗
 <p>金色的光泽洒在碧蓝的湖面
