更改背景图片

--- a/_posts/2018-02-24-花开花落 云卷云舒.md
+++ b/_posts/2018-02-24-花开花落 云卷云舒.md
@@ -1,7 +1,7 @@
 ---
 layout: blog
 book: true
-background-image: http://t1.aixinxi.net/o_1c65cmk99115v1u2d19lr4m02lpa.png-j.jpg
+background-image: http://t1.aixinxi.net/o_1c72qkonf6mtl4mpeub081sv2a.jpg-j.jpg
 category: 随笔
 title: 花开花落 云卷云舒
 tags:
@@ -166,5 +166,4 @@ redirect_from:
 <p>* 2013/6/9 12:41 丝稿
 <p>* 2015/10/30 19:44 木稿
 <p>* 2018/2/24 10:15 铁稿
-![Signal](https://raw.githubusercontent.com/INJNainggolan/INJNainggolan.GitHub.io/master/style/image_ex/signal.jpg)
 
