尝试新方法插入音乐

--- a/_posts/2018-02-24-花开花落 云卷云舒.md
+++ b/_posts/2018-02-24-花开花落 云卷云舒.md
@@ -11,7 +11,7 @@ redirect_from:
   - /2018/02/花开花落 云卷云舒/
 ---
 
-http://t1.aixinxi.net/o_1c72qri331f4d1kdubku1v6t1s5ba.mp3
+{% aplayer "她的睫毛" "周杰伦" "http://home.ustc.edu.cn/~mmmwhy/%d6%dc%bd%dc%c2%d7%20-%20%cb%fd%b5%c4%bd%de%c3%ab.mp3"  "http://home.ustc.edu.cn/~mmmwhy/jay.jpg" "autoplay=false" %}
 
 <p>I'm lonely alive
 <p>在恬静淡雅的图书馆，目光穿过古老大学校园的落地窗
